--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,2 @@
-Login and register functionality
+Use this as a resource
+https://stackoverflow.blog/2020/03/02/best-practices-for-rest-api-design/#h-nesting-resources-for-hierarchical-objects
